--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "assignmnt2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start:prod": "node ./dist/server.js",
+    "start": "node dist/server.js",
     "startDev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "prettierFix": "npx prettier --write src",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
